@@ -1,5 +1,8 @@
 #!/usr/bin/env ruby
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
 require "optparse"
 require "irb"
