@@ -1,5 +1,8 @@
 #!/usr/bin/env ruby
 # encoding: UTF-8
+#
+# Copyright (C) 2007-2010 Rakuten, Inc.
+#
 
 require "optparse"
 
@@ -9,7 +12,7 @@ require "fairy/share/base-app"
 require "fairy/share/conf"
 require "fairy/share/locale"
 require "fairy/share/encoding"
-require "fairy/master"
+require "fairy/main/master"
 
 $0 = "fairy master #{ARGV.join(' ')}"
 
