@@ -1,3 +1,7 @@
+Fri Sep 17 22:12:04 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* lib/fairy/fairy.rb, lib/fairy/main/*: REQ251対応完了
+
 Fri Sep 17 22:06:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* bin/fairy{-cat,cp,rm}: REQ251対応完了
